--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snake"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2024"
 
 [dependencies]
@@ -17,5 +17,8 @@ http-body-util = "0.1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.5", features = ["derive"] }
-self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
+self_update = { version = "0.41", features = [
+  "archive-tar",
+  "compression-flate2",
+] }
 semver = "1.0"
