chore: switch to Ubuntu 22.04 for faster CI/CD builds
- Changed GitHub Actions runner from ubuntu-20.04 to ubuntu-22.04
- GLIBC 2.35 (compatible with Debian 12+, Ubuntu 22.04+)
- Better runner availability reduces queue time
- Updated all documentation to reflect GLIBC 2.35 requirement

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   release:
-    runs-on: ubuntu-20.04  # Use Ubuntu 20.04 for older GLIBC 2.31 (better compatibility)
+    runs-on: ubuntu-22.04  # Use Ubuntu 22.04 for GLIBC 2.35 (better runner availability)
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
